--- a/styles/index.scss
+++ b/styles/index.scss
@@ -1,2 +1,303 @@
 @use './common.scss' as *;
 @use './responsive.scss';
+
+#wrap {
+    background-color: #f9f9f9;
+    header {
+        padding:0 70px; position:fixed; top:0; left: 0; right: 0;   
+        @include flex-row; justify-content: space-between; align-items: center;
+        background-color: $color-white;z-index: 999;height:75px;
+        box-shadow: 0 2px 8px rgba(0,0,0,0.08);
+        nav {
+            ul {
+                @include flex-row; gap: 80px;
+                li {
+                    font-size: $font-size-15;
+                    color:#bbb; 
+                }
+                .active {
+                    color:#222;
+                }
+            }
+        }
+        .logo {
+            max-width: 60px; display: block;
+            img {width: 100%; height: auto;}
+        }
+    }
+    main {
+        #home {
+            background-image: url(/images/pattern/main_bg_1.jpg);
+            @include bgimg; width: 100%; height:100vh; position: relative;
+            .home_inner {
+                position: absolute; 
+                top:50%;left:50%; transform:translate(-50%, -50% );
+                .year {color: transparent;-webkit-text-stroke: 1px #222;font-size: 40px;
+                    font-weight:$font-weight-bold ;  
+                    position: absolute;left: -8%; top: -35%;
+                }
+                .title {font-size: 100px;font-weight: $font-weight-bold;color: #222;}
+                .name {font-size: 22px; font-weight: 300; color: #222;
+                    position: absolute; right:-13%;
+                }
+            }
+        }
+        #profile { height:100vh; 
+            .profile_inner{
+                padding: 200px 350px;
+                @include flex-row;  justify-content: space-between;
+                .section {
+                    font-size: $font-size-18;font-weight: $font-weight-semi;
+                    color:#00D6FF;
+                }
+                .left_content {
+                    position: relative;
+                    .introduction { position: absolute; top: -80px;
+                        font-size: 24px;white-space: nowrap; line-height: 150%;
+                        span {font-weight: $font-weight-medium}
+                        em {font-weight: $font-weight-semi;color:#00D6FF}
+                    }
+                    @include flex-col; gap:20px;
+                    .row {
+                        @include flex-col; gap:10px;
+                        padding: 10px;
+                        .row_in { 
+                            .years { font-size: $font-size-12; color: #999;}
+                            .name {}
+                        }
+                    }
+                    .picture{
+                        margin: 0 auto;
+                        width: 177px;
+                        height: 236px;
+                        img {
+                            width: 100%; height: 100%;
+                            object-fit: cover;
+                        }
+                        
+                    }
+                    .about {
+                        .row_top {
+                            @include flex-row; gap: 10px;
+                            .name {
+                                font-size: 18px;font-weight:$font-weight-medium
+                            }
+                        }
+                        .row {
+                            @include flex-row; gap: 15px;
+                        }
+                    }
+                    .license{}
+                    .education{}
+                }
+                .right_content {
+                    width:650px;
+                    margin-bottom:20px;
+                    .section {}
+                    .skill_wrap {
+                        padding:12px 10px;
+                        .skill_category {
+                            margin-bottom: 20px;
+                            .category_title{
+                                position:relative;
+                                font-size: 17px;font-weight: 500;margin-bottom:12px;
+                                margin-left: 20px;
+                                &::after {
+                                    content: ''; display: block;border:1px solid #00D6FF;
+                                    width: 8px;height: 8px; position: absolute; bottom:50%;
+                                    transform: translateY(50%); left:-20px;
+                                }
+                            }
+                            .skill-list{
+                                @include flex-col; gap:10px;
+                                .skill-item {
+                                    @include flex-row; justify-content: space-between;
+                                    
+                                    dt {
+                                        position: relative;
+                                        padding-left: 30px;
+                                        &::after {
+                                            content: ''; display: block;background-color: #00D6FF;
+                                            width: 4px;height: 4px; position: absolute; bottom:50%;
+                                            transform: translateY(50%); left:10px
+                                        }
+                                    }                                
+                                    dd { background-color: #fff; font-size:$font-size-15;padding:0 5px;}
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        }
+        #project {
+            .project_inner {
+                .swiper{position:relative;
+                    height: 100vh;
+                    .swiper-wrapper {
+                        .swiper-slide {
+                            display: flex;
+                            .left_info{
+                                padding:170px 50px 0;
+                                flex: 0 0 33%; 
+                                .top {
+                                    .sequence {font-size:20px;}
+                                    .title {margin-top: 10px;font-size: 56px; font-weight:$font-weight-bold;
+                                        span {font-size:32px; margin-left: 10px;}
+                                    }
+                                }
+                                .desc {
+                                    @include flex-col; gap:25px;
+                                    padding:145px 0 200px;
+                                    dt {font-size: 18px;display: flex;justify-content: end;
+                                        width: 110px; align-items: center; font-weight: $font-weight-medium;
+                                    }
+                                    dd {justify-content: start;}
+                                    .desc_period {@include flex-row;gap: 20px;align-items: center;}
+                                    .desc_contribution {@include flex-row;gap: 20px;align-items: center;}
+                                    .desc_tool {@include flex-row;gap: 20px;align-items: center;}
+                                }
+                                .proto_btn {
+                                    @include flex-row; gap:20px; position: relative;
+                                    .prototype {width: 100%; height: 50px; color: #fff;
+                                        display:flex;align-items: center; justify-content: center;
+                                        border-radius: 7px;
+                                    }
+                                    .figma {width: 100%; height: 50px;color: #777;
+                                        background: #eee;border-radius: 7px;
+                                        display:flex;align-items: center; justify-content: center;
+                                    }
+                                    .original_site {
+                                        color: #777;font-size: 13px; 
+                                        position: absolute; right: 0; bottom: -30px;
+                                        img {transform: translateY(12%);}
+                                    }
+                                }
+                            }
+                            .project_bg{flex: 1;}
+                        }
+                        .project_01 {  
+                            .left_info{
+                                .sequence {color: #DD8686;}
+                                .prototype{
+                                    background: #DD8686;
+                                }
+                            }
+                            .project_bg {
+                                background: linear-gradient(
+                                90deg,
+                                #e38b8c 0%, /* 진한 쪽 */
+                                #F0B2B3 33%,     
+                                #F7D6D6  66%,
+                                #f9f9f9 100%      
+                            );}
+                            }
+                        .project_02 {
+                            .left_info{
+                                .sequence {color: #4D83FF;}
+                                .prototype{
+                                    background: #4D83FF;
+                                }
+                            }
+                            .project_bg {
+                                background: linear-gradient(
+                                90deg,
+                                #4D83FF 0%,
+                                #82A6FF 50%,
+                                #BDD1FF 75%,
+                                #FFFFFF 100%
+                                );
+                            }
+                        }
+                        .project_03 {}
+                        .project_04 {}
+                    }
+                    .pagination_btn {
+                        position: absolute;bottom:35px; left: 5px;
+                        width: 100px; 
+                        .next_prev_btn {
+                            position: absolute;right:15px; z-index: 100;
+                            .swiper-button-next, .swiper-button-prev {
+                                width: 24px;height: 24px; top:-10px; color: #aaa;
+                                transition: color 0.3s;
+                            }
+                            .swiper-button-next svg , .swiper-button-prev svg{
+                                fill:currentColor
+                            }
+                            .swiper-button-next {
+                                left:20px
+                            }
+                            .swiper-button-next:hover,.swiper-button-prev:hover{
+                                color:#333
+                            }
+                        }
+                        .swiper-pagination {color: #555; font-size: 14px;}
+                        .swiper-pagination-total{ color: #777;}
+                    }   
+                }
+            }
+        }
+        #banner_details {
+            padding: 0 350px;width: 100%;height:100vh; 
+            position: relative;  
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            .title {font-size: 24px;font-weight: $font-weight-bold;
+                color: #00D6FF; text-align: center;
+                position: absolute; 
+                left: 50%;
+                transform: translateX(-50%);
+                top:80px;
+            }
+            .banner_details_inner {
+                height: 675px;
+                display: flex;
+                flex-direction: column;
+                gap: 15px; 
+                #design_top_swiper {
+                    width: 100%;margin-bottom: 15px;
+                    height: 530px;
+                    .swiper-wrapper {
+                        transition-timing-function: linear !important; 
+                        .swiper-slide {
+
+                        }
+                    }
+                }
+                #design_bottom_swiper {
+                    width:100%;
+                    height: 130px;
+                    .swiper-wrapper {
+                        transition-timing-function: linear !important; 
+                        .swiper-slide {
+                        }
+                    }
+                }
+            }
+        }
+        #contact {
+            background-image: url(/images/pattern/main_bg_1.jpg); @include bgimg;
+            width: 100%; height: 100vh; 
+            position: relative;
+            .contact_inner {
+                position: absolute; top:50%;left:50%; transform:translate(-50%, -50% );
+                .center {
+                    @include flex-col;@include flex-center;
+                    .sub {font-size: 24px; font-weight: 300;
+                        em {font-weight: $font-weight-semi;color: #00D6FF;}
+                    }
+                    .main {font-size: 82px; font-weight: 700;}
+                }
+                .contact_info {
+                    @include flex-col;@include flex-center; gap:10px;
+                    position: absolute; bottom:-300px; left:50%;transform: translateX(-50%);
+                    img {
+                        width: 150px; height: 150px;
+                    }
+                }
+            } 
+        }
+    }
+    footer {}
+}
