--- a/styles/reset.css
+++ b/styles/reset.css
@@ -7,14 +7,14 @@ em,strong,sub,sup,br,span,del,s,q,mark,code,img,a,
 table,thead,tbody,tfoot,tr,td,th {
     margin:0; padding:0; box-sizing:border-box;
     line-height:1; letter-spacing:-0.02em; word-spacing:0;
-    font-size:1em; font-weight:400; font-style:normal;
+    font-size:1em; font-weight:400; font-style:normal; color:#333;
     
     
     
     font-family:'pretendard', '맑은 고딕',sans-serif;
 }
 /* 개별 태그 초기값 */
-a {text-decoration:none; color:#000;}
+a {text-decoration:none; color:#333;}
 ul,ol,li {list-style:none;}
 fieldset {border:0;}
 legend {display:none;}
