--- a/styles/style.css
+++ b/styles/style.css
@@ -28,11 +28,16 @@
   gap: 80px;
 }
 #wrap header nav ul li button {
-  font-size: 0.938rem;
   color: #bbb;
-  font-weight: 300;
+  transition: color 0.3s;
+}
+#wrap header nav ul li:hover button {
+  color: #777;
 }
 #wrap header nav ul .active button {
+  color: #222;
+}
+#wrap header nav ul .active:hover button {
   color: #222;
 }
 #wrap header .logo {
@@ -43,13 +48,22 @@
   width: 100%;
   height: auto;
 }
+#wrap main {
+  height: 100vh;
+}
+#wrap main .swiper-wrapper {
+  width: 100%;
+}
+#wrap main > div {
+  height: 100vh;
+  box-sizing: border-box;
+}
 #wrap main #home {
   background-image: url(/images/pattern/main_bg_1.jpg);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
   width: 100%;
-  height: 100vh;
   position: relative;
 }
 #wrap main #home .home_inner {
@@ -78,9 +92,6 @@
   color: #222;
   position: absolute;
   right: -13%;
-}
-#wrap main #profile {
-  height: 100vh;
 }
 #wrap main #profile .profile_inner {
   padding: 200px 350px;
@@ -279,16 +290,18 @@
   align-items: center;
   justify-content: center;
   border-radius: 7px;
+  transition: background-color 0.4s;
 }
 #wrap main #project .project_inner .swiper .swiper-wrapper .swiper-slide .left_info .proto_btn .figma {
   width: 100%;
   height: 50px;
-  color: #777;
+  color: #aaa;
   background: #eee;
   border-radius: 7px;
   display: flex;
   align-items: center;
   justify-content: center;
+  transition: background-color 0.4s, color 0.4s;
 }
 #wrap main #project .project_inner .swiper .swiper-wrapper .swiper-slide .left_info .proto_btn .original_site {
   color: #777;
@@ -319,6 +332,13 @@
 #wrap main #project .project_inner .swiper .swiper-wrapper .project_01 .left_info .prototype {
   background: #E38B8C;
 }
+#wrap main #project .project_inner .swiper .swiper-wrapper .project_01 .left_info .prototype:hover {
+  background-color: #D16A6B;
+}
+#wrap main #project .project_inner .swiper .swiper-wrapper .project_01 .left_info .figma:hover {
+  background: #eed2d3;
+  color: #fff;
+}
 #wrap main #project .project_inner .swiper .swiper-wrapper .project_01 .project_bg {
   background: linear-gradient(90deg, #E38B8C 0%, #F0B2B3 55%, #FDE6E6 100%);
 }
@@ -328,23 +348,44 @@
 #wrap main #project .project_inner .swiper .swiper-wrapper .project_02 .left_info .prototype {
   background: #87A6EE;
 }
+#wrap main #project .project_inner .swiper .swiper-wrapper .project_02 .left_info .prototype:hover {
+  background-color: #6E8ED9;
+}
+#wrap main #project .project_inner .swiper .swiper-wrapper .project_02 .left_info .figma:hover {
+  background: #c3cee7;
+  color: #fff;
+}
 #wrap main #project .project_inner .swiper .swiper-wrapper .project_02 .project_bg {
   background: linear-gradient(90deg, #87A6EE 0%, #9DB1F0 55%, #FFFFFF 100%);
 }
-#wrap main #project .project_inner .swiper .swiper-wrapper .project_03 .sequence {
+#wrap main #project .project_inner .swiper .swiper-wrapper .project_03 .left_info .sequence {
   color: #F18DBD;
 }
-#wrap main #project .project_inner .swiper .swiper-wrapper .project_03 .prototype {
+#wrap main #project .project_inner .swiper .swiper-wrapper .project_03 .left_info .prototype {
   background-color: #F18DBD;
+}
+#wrap main #project .project_inner .swiper .swiper-wrapper .project_03 .left_info .prototype:hover {
+  background-color: #E078A9;
+}
+#wrap main #project .project_inner .swiper .swiper-wrapper .project_03 .left_info .figma:hover {
+  background: #eecadb;
+  color: #fff;
 }
 #wrap main #project .project_inner .swiper .swiper-wrapper .project_03 .project_bg {
   background: linear-gradient(90deg, #F18DBD 0%, #F7BBD3 55%, #FEEAF3 100%);
 }
-#wrap main #project .project_inner .swiper .swiper-wrapper .project_04 .sequence {
+#wrap main #project .project_inner .swiper .swiper-wrapper .project_04 .left_info .sequence {
   color: #EBD29B;
 }
-#wrap main #project .project_inner .swiper .swiper-wrapper .project_04 .prototype {
+#wrap main #project .project_inner .swiper .swiper-wrapper .project_04 .left_info .prototype {
   background-color: #EBD29B;
+}
+#wrap main #project .project_inner .swiper .swiper-wrapper .project_04 .left_info .prototype:hover {
+  background-color: #D9BD84;
+}
+#wrap main #project .project_inner .swiper .swiper-wrapper .project_04 .left_info .figma:hover {
+  background: #e7dcc3;
+  color: #fff;
 }
 #wrap main #project .project_inner .swiper .swiper-wrapper .project_04 .project_bg {
   background: linear-gradient(90deg, #EBD29B 0%, #F3E3C1 55%, #FFF7EB 100%);
@@ -352,26 +393,26 @@
 #wrap main #project .project_inner .swiper .pagination_btn {
   position: absolute;
   bottom: 35px;
-  left: 5px;
+  left: 22px;
   width: 100px;
 }
 #wrap main #project .project_inner .swiper .pagination_btn .next_prev_btn {
   position: absolute;
-  right: 15px;
+  right: -5px;
   z-index: 100;
+  bottom: 5px;
 }
 #wrap main #project .project_inner .swiper .pagination_btn .next_prev_btn .swiper-button-next, #wrap main #project .project_inner .swiper .pagination_btn .next_prev_btn .swiper-button-prev {
-  width: 24px;
-  height: 24px;
-  top: -10px;
+  top: -40px;
   color: #aaa;
   transition: color 0.3s;
+  width: 30px;
 }
 #wrap main #project .project_inner .swiper .pagination_btn .next_prev_btn .swiper-button-next svg, #wrap main #project .project_inner .swiper .pagination_btn .next_prev_btn .swiper-button-prev svg {
   fill: currentColor;
 }
 #wrap main #project .project_inner .swiper .pagination_btn .next_prev_btn .swiper-button-next {
-  left: 20px;
+  left: 24px;
 }
 #wrap main #project .project_inner .swiper .pagination_btn .next_prev_btn .swiper-button-next:hover, #wrap main #project .project_inner .swiper .pagination_btn .next_prev_btn .swiper-button-prev:hover {
   color: #333;
@@ -386,7 +427,6 @@
 #wrap main #banner_details {
   padding: 0 350px;
   width: 100%;
-  height: 100vh;
   position: relative;
   display: flex;
   flex-direction: column;
@@ -429,7 +469,6 @@
   background-position: center;
   background-repeat: no-repeat;
   width: 100%;
-  height: 100vh;
   position: relative;
 }
 #wrap main #contact .contact_inner {
