--- a/styles/index.scss
+++ b/styles/index.scss
@@ -13,13 +13,19 @@
                 @include flex-row; gap: 80px;
                 li {
                     button{
-                        font-size: $font-size-15;
-                        color:#bbb; font-weight:300;
+                        color:#bbb;
+                        transition: color 0.3s;
+                    }
+                    &:hover button {
+                        color:#777
                     }
                 }
                 .active {
                     button {
                         color:#222;
+                    }
+                    &:hover button {
+                        color:#222
                     }
                 }
             }
@@ -30,9 +36,14 @@
         }
     }
     main {
+        height: 100vh;
+        .swiper-wrapper {
+            width: 100%;
+        }
+        > div {height:100vh;box-sizing: border-box;} 
         #home {
             background-image: url(/images/pattern/main_bg_1.jpg);
-            @include bgimg; width: 100%; height:100vh; position: relative;
+            @include bgimg; width: 100%; position: relative;
             .home_inner {
                 position: absolute; 
                 top:50%;left:50%; transform:translate(-50%, -50% );
@@ -46,7 +57,7 @@
                 }
             }
         }
-        #profile { height:100vh; 
+        #profile {
             .profile_inner{
                 padding: 200px 350px;
                 @include flex-row;  justify-content: space-between;
@@ -165,11 +176,12 @@
                                     @include flex-row; gap:20px; position: relative;
                                     .prototype {width: 100%; height: 50px; color: #fff;
                                         display:flex;align-items: center; justify-content: center;
-                                        border-radius: 7px;
+                                        border-radius: 7px;transition: background-color 0.4s;
                                     }
-                                    .figma {width: 100%; height: 50px;color: #777;
+                                    .figma {width: 100%; height: 50px;color: #aaa;
                                         background: #eee;border-radius: 7px;
                                         display:flex;align-items: center; justify-content: center;
+                                        transition: background-color 0.4s, color 0.4s;
                                     }
                                     .original_site {
                                         color: #777;font-size: 13px; 
@@ -188,7 +200,14 @@
                             .left_info{
                                 .sequence {color:#E38B8C}
                                 .prototype{
-                                    background: #E38B8C
+                                    background: #E38B8C;
+                                    &:hover {
+                                        background-color: #D16A6B;
+                                    }
+                                }
+                                .figma:hover{
+                                    background: #eed2d3;
+                                    color:#fff
                                 }
                             }
                             .project_bg {
@@ -198,14 +217,22 @@
                                 #F0B2B3 55%, /* 파스텔 로즈 */
                                 #FDE6E6 100% /* 거의 화이트에 가까운 핑크 */
                             );}
+
                             }
                         .project_02 {
                             .left_info{
                                 .sequence {color: #87A6EE;}
                                 .prototype{
                                     background: #87A6EE;
+                                    &:hover {
+                                        background-color: #6E8ED9;
+                                    }
                                 }
-                            }
+                                .figma:hover{
+                                    background: #c3cee7;
+                                    color:#fff
+                                }
+                                }
                             .project_bg {
                                 background: linear-gradient(
                                 90deg,
@@ -216,11 +243,20 @@
                             }
                         }
                         .project_03 {
-                            .sequence{
-                                color: #F18DBD ;
-                            }
-                            .prototype{
-                                background-color: #F18DBD ;
+                            .left_info{
+                                .sequence{
+                                    color: #F18DBD ;
+                                }
+                                .prototype{
+                                    background-color: #F18DBD ;
+                                    &:hover {
+                                        background-color: #E078A9;
+                                    }
+                                }
+                                .figma:hover{
+                                    background: #eecadb ;
+                                    color:#fff
+                                }
                             }
                             .project_bg {background: linear-gradient(
                                 90deg,
@@ -231,11 +267,20 @@
                             }
                         }
                         .project_04 {
-                            .sequence{ 
-                                color: #EBD29B ;
-                            }
-                            .prototype{
-                                background-color: #EBD29B ;
+                            .left_info{
+                                .sequence{ 
+                                    color: #EBD29B ;
+                                }
+                                .prototype{
+                                    background-color: #EBD29B ;
+                                    &:hover {
+                                        background-color:#D9BD84;
+                                    }
+                                }
+                                .figma:hover{
+                                    background:#e7dcc3 ;
+                                    color:#fff
+                                }
                             }
                             .project_bg { background: linear-gradient(
                                 90deg,
@@ -247,19 +292,20 @@
                         }
                     }
                     .pagination_btn {
-                        position: absolute;bottom:35px; left: 5px;
+                        position: absolute;bottom:35px; left: 22px;
                         width: 100px; 
                         .next_prev_btn {
-                            position: absolute;right:15px; z-index: 100;
+                            position: absolute;right:-5px; z-index: 100;bottom: 5px;
                             .swiper-button-next, .swiper-button-prev {
-                                width: 24px;height: 24px; top:-10px; color: #aaa;
+                                top:-40px; color: #aaa;
                                 transition: color 0.3s;
+                                width:30px;
                             }
                             .swiper-button-next svg , .swiper-button-prev svg{
-                                fill:currentColor
+                                fill:currentColor;
                             }
                             .swiper-button-next {
-                                left:20px
+                                left:24px
                             }
                             .swiper-button-next:hover,.swiper-button-prev:hover{
                                 color:#333
@@ -272,7 +318,7 @@
             }
         }
         #banner_details {
-            padding: 0 350px;width: 100%;height:100vh; 
+            padding: 0 350px;width: 100%;
             position: relative;  
             display: flex;
             flex-direction: column;
@@ -312,7 +358,7 @@
         }
         #contact {
             background-image: url(/images/pattern/main_bg_1.jpg); @include bgimg;
-            width: 100%; height: 100vh; 
+            width: 100%;
             position: relative;
             .contact_inner {
                 position: absolute; top:50%;left:50%; transform:translate(-50%, -50% );
