--- a/styles/index.scss
+++ b/styles/index.scss
@@ -182,7 +182,7 @@
                                     .figma {width: 100%; height: 50px;color: #aaa;
                                         background: #eee;border-radius: 7px;
                                         display:flex;align-items: center; justify-content: center;
-                                        transition: background-color 0.4s, color 0.4s;
+                                        transition: background-color 0.4s, color 0.4s; position: relative; z-index: 40;
                                     }
                                     .original_site {
                                         color: #777;font-size: 13px; 
