--- a/styles/style.css
+++ b/styles/style.css
@@ -302,6 +302,8 @@
   align-items: center;
   justify-content: center;
   transition: background-color 0.4s, color 0.4s;
+  position: relative;
+  z-index: 40;
 }
 #wrap main #project .project_inner .swiper .swiper-wrapper .swiper-slide .left_info .proto_btn .original_site {
   color: #777;
