--- a/styles/style.css
+++ b/styles/style.css
@@ -271,10 +271,22 @@
   align-items: center;
 }
 #wrap main #project .project_inner .swiper .swiper-wrapper .swiper-slide .left_info .desc .desc_tool {
+  position: relative;
   display: flex;
   flex-flow: row nowrap;
   gap: 20px;
   align-items: center;
+}
+#wrap main #project .project_inner .swiper .swiper-wrapper .swiper-slide .left_info .desc .desc_tool .cafe24 {
+  position: absolute;
+  right: -37px;
+  top: 1px;
+}
+#wrap main #project .project_inner .swiper .swiper-wrapper .swiper-slide .left_info .desc .desc_tool .cafe24 svg {
+  height: 12px;
+}
+#wrap main #project .project_inner .swiper .swiper-wrapper .swiper-slide .left_info .desc .desc_tool .cafe24 svg path {
+  fill: #222;
 }
 #wrap main #project .project_inner .swiper .swiper-wrapper .swiper-slide .left_info .proto_btn {
   display: flex;
