--- a/styles/index.scss
+++ b/styles/index.scss
@@ -191,16 +191,16 @@
                                     }
                                 }
                             }
-                            .mockup_img {
-                                position: absolute; max-width: 1500px; top:-5%; right:-15%;
+                            .desktop_mockup {
+                                position: absolute; max-width: 800px; top:26%; right:3%;
                                 img {width: 100%; height: auto;}z-index: 20;
                             }
                             .tablet_mockup {
-                                position: absolute; max-width: 500px; top: 24%; right:36%;
+                                position: absolute; max-width: 400px; top: 24%; right:40%;
                                 img {width: 100%; height: auto;} z-index:10;
                             }
                             .phone_mockup {
-                                position: absolute; max-width: 150px; top: 48%; right:38%;
+                                position: absolute; max-width: 150px; top: 48%; right:37%;
                                 img {width: 100%; height: auto;} z-index:30;
                             }
                             .project_bg{flex: 1;}
@@ -231,8 +231,8 @@
                             }
                         }
                         .project_02 {  
-                            .mockup_img {
-                                max-width:4000px;height:1400px;top:-18%; right:-15%;
+                            .desktop_mockup {
+                                max-width:1050px;height:auto;top:18%; right:5%;
                                 img {width: 100%; height: 100%;object-fit: cover;}
                             }
                             .left_info{
@@ -258,6 +258,10 @@
                             );}
                             }
                             .project_03 {
+                                .desktop_mockup {
+                                    max-width:4000px;height:1400px;top:-18%; right:-15%;
+                                    img {width: 100%; height: 100%;object-fit: cover;}
+                                }
                                 .left_info{
                                     .sequence{ 
                                         color: #EBD29B ;
@@ -305,7 +309,7 @@
                                         #f9f9f9 100%
                                         );
                                     }
-                                .mockup_img {
+                                .desktop_mockup {
                                     max-width:4000px;height:1400px;top:-18%; right:-15%;
                                     img {width: 100%; height: 100%;object-fit: cover;}
                                 }
