--- a/styles/style.css
+++ b/styles/style.css
@@ -313,24 +313,24 @@
 #wrap main #project .project_inner .swiper .swiper-wrapper .swiper-slide .left_info .proto_btn .original_site img {
   transform: translateY(12%);
 }
-#wrap main #project .project_inner .swiper .swiper-wrapper .swiper-slide .mockup_img {
+#wrap main #project .project_inner .swiper .swiper-wrapper .swiper-slide .desktop_mockup {
   position: absolute;
-  max-width: 1500px;
-  top: -5%;
-  right: -15%;
+  max-width: 800px;
+  top: 26%;
+  right: 3%;
 }
-#wrap main #project .project_inner .swiper .swiper-wrapper .swiper-slide .mockup_img img {
+#wrap main #project .project_inner .swiper .swiper-wrapper .swiper-slide .desktop_mockup img {
   width: 100%;
   height: auto;
 }
-#wrap main #project .project_inner .swiper .swiper-wrapper .swiper-slide .mockup_img {
+#wrap main #project .project_inner .swiper .swiper-wrapper .swiper-slide .desktop_mockup {
   z-index: 20;
 }
 #wrap main #project .project_inner .swiper .swiper-wrapper .swiper-slide .tablet_mockup {
   position: absolute;
-  max-width: 500px;
+  max-width: 400px;
   top: 24%;
-  right: 36%;
+  right: 40%;
 }
 #wrap main #project .project_inner .swiper .swiper-wrapper .swiper-slide .tablet_mockup img {
   width: 100%;
@@ -343,7 +343,7 @@
   position: absolute;
   max-width: 150px;
   top: 48%;
-  right: 38%;
+  right: 37%;
 }
 #wrap main #project .project_inner .swiper .swiper-wrapper .swiper-slide .phone_mockup img {
   width: 100%;
@@ -371,13 +371,13 @@
 #wrap main #project .project_inner .swiper .swiper-wrapper .project_01 .project_bg {
   background: linear-gradient(90deg, #F18DBD 0%, #F7BBD3 33%, #FEEAF3 66%, #f9f9f9 100%);
 }
-#wrap main #project .project_inner .swiper .swiper-wrapper .project_02 .mockup_img {
-  max-width: 4000px;
-  height: 1400px;
-  top: -18%;
-  right: -15%;
+#wrap main #project .project_inner .swiper .swiper-wrapper .project_02 .desktop_mockup {
+  max-width: 1050px;
+  height: auto;
+  top: 18%;
+  right: 5%;
 }
-#wrap main #project .project_inner .swiper .swiper-wrapper .project_02 .mockup_img img {
+#wrap main #project .project_inner .swiper .swiper-wrapper .project_02 .desktop_mockup img {
   width: 100%;
   height: 100%;
   object-fit: cover;
@@ -397,6 +397,17 @@
 }
 #wrap main #project .project_inner .swiper .swiper-wrapper .project_02 .project_bg {
   background: linear-gradient(90deg, #E38B8C 0%, #F0B2B3 33%, #FDE6E6 66%, #f9f9f9 100%);
+}
+#wrap main #project .project_inner .swiper .swiper-wrapper .project_03 .desktop_mockup {
+  max-width: 4000px;
+  height: 1400px;
+  top: -18%;
+  right: -15%;
+}
+#wrap main #project .project_inner .swiper .swiper-wrapper .project_03 .desktop_mockup img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 #wrap main #project .project_inner .swiper .swiper-wrapper .project_03 .left_info .sequence {
   color: #EBD29B;
@@ -430,13 +441,13 @@
 #wrap main #project .project_inner .swiper .swiper-wrapper .project_04 .project_bg {
   background: linear-gradient(90deg, #87A6EE 0%, #b3bee2 33%, #f9f9f9 66%, #f9f9f9 100%);
 }
-#wrap main #project .project_inner .swiper .swiper-wrapper .project_04 .mockup_img {
+#wrap main #project .project_inner .swiper .swiper-wrapper .project_04 .desktop_mockup {
   max-width: 4000px;
   height: 1400px;
   top: -18%;
   right: -15%;
 }
-#wrap main #project .project_inner .swiper .swiper-wrapper .project_04 .mockup_img img {
+#wrap main #project .project_inner .swiper .swiper-wrapper .project_04 .desktop_mockup img {
   width: 100%;
   height: 100%;
   object-fit: cover;
