--- a/styles/index.scss
+++ b/styles/index.scss
@@ -342,7 +342,7 @@
             }
         }
         #banner_details {
-            padding: 0 350px;width: 100%;
+            padding: 50px 350px 0;width: 100%;
             position: relative;  
             display: flex;
             flex-direction: column;
@@ -352,7 +352,7 @@
                 position: absolute; 
                 left: 50%;
                 transform: translateX(-50%);
-                top:80px;
+                top:110px;
             }
             .banner_details_inner {
                 height: 675px;
