--- a/styles/style.css
+++ b/styles/style.css
@@ -487,7 +487,7 @@
   color: #777;
 }
 #wrap main #banner_details {
-  padding: 0 350px;
+  padding: 50px 350px 0;
   width: 100%;
   position: relative;
   display: flex;
@@ -502,7 +502,7 @@
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
-  top: 80px;
+  top: 110px;
 }
 #wrap main #banner_details .banner_details_inner {
   height: 675px;
